# FFVII-Ever-Crisis-GB-Optimizer

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements-sheets.txt  requirements.txt
.github/workflows/: ci.yml
config/: boss_data.json  player_data.json
src/: main.py
src/models/: BossData.py  PlayerData.py
src/optimizer/: boss_optimizer.py
src/utils/: csv_utils.py  data_utils.py  file_utils.py  logger.py  sheets_utils.py
tests/: conftest.py  test_csv_utils.py  test_data_utils.py  test_models.py  test_optimizer.py  test_sheets_utils.py
